--- a/css/astyles.css
+++ b/css/astyles.css
@@ -1,5 +1,7 @@
 /*------------- Tag CSS ----------- */
-
+*{
+  max-width: 100vw;
+}
 h1{
   font-family: 'Montserrat', sans-serif;
   text-transform: uppercase;
