--- a/history.css
+++ b/history.css
@@ -29,7 +29,7 @@ margin-right: 80px;
 /*CSS for History page banner*/
 .banner2 {
 background-image: url("../img/history.jpg");
-width: 2000px;
+width: 100vw;
 height: 1000px;
 }
 
